--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
   text-align: center;
+  background-color: #d84949;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.product-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  align-items: flex-start;
+  text-align: left;
+  gap: 2em;
+  grid-auto-flow: column;
+  grid-auto-columns: minmax(300px, 1fr);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.prodBtn {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.prodBtn > div {
+  display: grid;
+  grid-template-rows: repeat(2, 2em);
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  background-color: #ccdbdf;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+  display: grid;
+  grid-template-rows: repeat(4, 2em);
+  gap: .7em;
+}
+
+.form > div {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(2em, 1fr));
+  gap: .7em;
+}
+
+input , button {
+  background-color: #e05454;
+  border: transparent;
+  border-radius: 5px;
+  opacity: 50%;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+  color: #ffffff;
+  font-weight: bold;
+  font-size: medium;
+}
+
+::placeholder {
+  color: #ffffff;
+}
+
+img {
+  width: 20em;
+}
+
+.dashboard > div {
+  min-height: 300px;
+  border: solid black 1px;
 }
