--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 
 .App {
   text-align: center;
-  background-color: #d84949;
+  background-color: #fafafa;
 }
 
 .product-container {
@@ -13,7 +13,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   align-items: flex-start;
   text-align: left;
-  gap: 2em;
+  gap: 2rem;
   grid-auto-flow: column;
   grid-auto-columns: minmax(300px, 1fr);
 }
@@ -21,49 +21,66 @@ body {
 .prodBtn {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 1rem;
 }
 
 .prodBtn > div {
   display: grid;
-  grid-template-rows: repeat(2, 2em);
+  grid-template-rows: repeat(2, 2rem);
+  gap: 1rem;
 }
 
 header {
-  background-color: #ccdbdf;
+  background-color: #859ce7;
 }
 
 .form {
   display: grid;
-  grid-template-rows: repeat(4, 2em);
-  gap: .7em;
+  grid-template-rows: .7fr repeat(4, 2rem);
+  gap: .7rem;
+  background-color: #ca4848;
+  min-height: 25rem;
+  padding: 20px;
+  margin: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .form > div {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(2em, 1fr));
-  gap: .7em;
+  grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
+  gap: .7rem;
 }
 
 input , button {
-  background-color: #e05454;
   border: transparent;
   border-radius: 5px;
   opacity: 50%;
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
-  color: #ffffff;
   font-weight: bold;
   font-size: medium;
 }
 
+input {
+  background-color: white;
+}
+
 ::placeholder {
-  color: #ffffff;
+  color: #000000;
 }
 
 img {
-  width: 20em;
+  width: 20rem;
 }
 
 .dashboard > div {
-  min-height: 300px;
+  min-height: 22rem;
   border: solid black 1px;
+  background-color: #859ce7;
+  padding: 20px;
+  margin: 20px;
+}
+
+.prodBtnHldr > button {
+  background-color: #ca4848;
 }
