--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
   gap: 2rem;
   grid-auto-flow: column;
   grid-auto-columns: minmax(300px, 1fr);
+  margin: 20px auto;
 }
 
 .prodBtn {
@@ -26,8 +27,23 @@ body {
 
 .prodBtn > div {
   display: grid;
-  grid-template-rows: repeat(2, 2rem);
+  grid-template-rows: repeat(4, 2rem);
   gap: 1rem;
+}
+
+.prodBtnHldr > button {
+  background-color: #ca4848;
+  opacity: 100%;
+}
+
+.dashboard > div {
+  min-height: 20rem;
+  border: solid black 1px;
+  background-color: #859ce7;
+  padding: 20px;
+  margin: 20px;
+  font-weight: bold;
+  font-size: large;
 }
 
 header {
@@ -42,8 +58,10 @@ header {
   min-height: 25rem;
   padding: 20px;
   margin: 20px;
-  align-items: center;
-  justify-content: center;
+}
+
+.form > img {
+  justify-self: center;
 }
 
 .form > div {
@@ -71,16 +89,4 @@ input {
 
 img {
   width: 20rem;
-}
-
-.dashboard > div {
-  min-height: 22rem;
-  border: solid black 1px;
-  background-color: #859ce7;
-  padding: 20px;
-  margin: 20px;
-}
-
-.prodBtnHldr > button {
-  background-color: #ca4848;
 }
